--- a/config/samples/sample-secret.yaml
+++ b/config/samples/sample-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: app-hook-operator-system
 type: Opaque
 stringData:
-  username: mysql
-  password: mysql
+  username: postgresadmin
+  password: Test1234
