--- a/config/samples/sample-secret.yaml
+++ b/config/samples/sample-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: apphook-sample-secret
-  namespace: app-hook-operator-system
+  namespace: amberapp-system
 type: Opaque
 stringData:
   username: postgresadmin
