--- a/deploy/rbac.authorization.k8s.io_v1_clusterrole_amberapp-manager-role.yaml
+++ b/deploy/rbac.authorization.k8s.io_v1_clusterrole_amberapp-manager-role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   creationTimestamp: null
-  name: app-hook-operator-manager-role
+  name: amberapp-manager-role
 rules:
 - apiGroups:
   - apps
