--- a/deploy/v1_deployment_amberapp-controller-manager.yaml
+++ b/deploy/v1_deployment_amberapp-controller-manager.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   labels:
     control-plane: controller-manager
-  name: app-hook-operator-controller-manager
-  namespace: app-hook-operator-system
+  name: amberapp-controller-manager
+  namespace: amberapp-system
 spec:
   replicas: 1
   selector:
@@ -37,8 +37,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        #image: quay.io/shdn/app-hook-operator:0.0.1
-        image: registry.cn-shanghai.aliyuncs.com/jibudata/app-hook-operator:0.0.1
+        #image: quay.io/shdn/amberapp:0.0.1
+        image: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp:0.0.1
         livenessProbe:
           httpGet:
             path: /healthz
@@ -63,5 +63,5 @@ spec:
           allowPrivilegeEscalation: false
       securityContext:
         runAsNonRoot: true
-      serviceAccountName: app-hook-operator-controller-manager
+      serviceAccountName: amberapp-controller-manager
       terminationGracePeriodSeconds: 10
