--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -12,5 +12,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/shdn/app-hook-operator
-  newTag: 0.0.1
+  newName: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp
+  newTag: 0.0.2
