--- a/deploy/rbac.authorization.k8s.io_v1_clusterrole_amberapp-metrics-reader.yaml
+++ b/deploy/rbac.authorization.k8s.io_v1_clusterrole_amberapp-metrics-reader.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: app-hook-operator-metrics-reader
+  name: amberapp-metrics-reader
 rules:
 - nonResourceURLs:
   - /metrics
