--- a/deploy/rbac.authorization.k8s.io_v1_clusterrolebinding_amberapp-proxy-rolebinding.yaml
+++ b/deploy/rbac.authorization.k8s.io_v1_clusterrolebinding_amberapp-proxy-rolebinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: app-hook-operator-proxy-rolebinding
+  name: amberapp-proxy-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: app-hook-operator-proxy-role
+  name: amberapp-proxy-role
 subjects:
 - kind: ServiceAccount
-  name: app-hook-operator-controller-manager
-  namespace: app-hook-operator-system
+  name: amberapp-controller-manager
+  namespace: amberapp-system
