--- a/examples/mongodb-sample.yaml
+++ b/examples/mongodb-sample.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongo-secret
-  namespace: app-hook-operator-system
+  namespace: amberapp-system
 type: Opaque
 stringData:
   username: admin
@@ -12,11 +12,11 @@ apiVersion: storage.jibudata.com/v1alpha1
 kind: AppHook
 metadata:
   name: mongo-sample
-  namespace: app-hook-operator-system
+  namespace: amberapp-system
 spec:
   name: mongo-sample
   appProvider: mongodb
   endPoint: "mongodb.mongodb-ns"
   secret: 
     name: mongo-secret
-    namespace: "app-hook-operator-system"
+    namespace: "amberapp-system"
