--- a/deploy/rbac.authorization.k8s.io_v1_clusterrole_amberapp-manager-role.yaml
+++ b/deploy/rbac.authorization.k8s.io_v1_clusterrole_amberapp-manager-role.yaml
@@ -29,7 +29,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - storage.jibudata.com
+  - ys.jibudata.com
   resources:
   - apphooks
   verbs:
@@ -41,13 +41,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - storage.jibudata.com
+  - ys.jibudata.com
   resources:
   - apphooks/finalizers
   verbs:
   - update
 - apiGroups:
-  - storage.jibudata.com
+  - ys.jibudata.com
   resources:
   - apphooks/status
   verbs:
