--- a/examples/mongodb-sample.yaml
+++ b/examples/mongodb-sample.yaml
@@ -8,7 +8,7 @@ stringData:
   username: admin
   password: password
 ---
-apiVersion: storage.jibudata.com/v1alpha1
+apiVersion: ys.jibudata.com/v1alpha1
 kind: AppHook
 metadata:
   name: mongo-sample
