--- a/config/rbac/apphook_editor_role.yaml
+++ b/config/rbac/apphook_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: apphook-editor-role
 rules:
 - apiGroups:
-  - storage.jibudata.com
+  - ys.jibudata.com
   resources:
   - apphooks
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - storage.jibudata.com
+  - ys.jibudata.com
   resources:
   - apphooks/status
   verbs:
