--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
-- storage_v1alpha1_apphook.yaml
+- ys_v1alpha1_apphook.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
