--- a/examples/mysql-sample.yaml
+++ b/examples/mysql-sample.yaml
@@ -8,7 +8,7 @@ stringData:
   username: root
   password: password
 ---
-apiVersion: storage.jibudata.com/v1alpha1
+apiVersion: ys.jibudata.com/v1alpha1
 kind: AppHook
 metadata:
   name: mysql-sample
