--- a/examples/mysql-deployment.yaml
+++ b/examples/mysql-deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: hooktest
+  name: mysql-demo
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: hooktest-mysql
-  namespace: hooktest
+  name: mysql-demo-svc
+  namespace: mysql-demo
   labels:
-    app: hooktest
+    app: mysql-demo
 spec:
   ports:
   - port: 3306
     protocol: TCP
     targetPort: 3306
   selector:
-    app: hooktest
+    app: mysql-demo
     tier: mysql
   type: ClusterIP
   #clusterIP: None
@@ -25,9 +25,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
-  namespace: hooktest
+  namespace: mysql-demo
   labels:
-    app: hooktest
+    app: mysql-demo
 spec:
   accessModes:
     - ReadWriteOnce
@@ -40,21 +40,21 @@ spec:
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: hooktest-mysql
-  namespace: hooktest
+  name: mysql-demo-mysql
+  namespace: mysql-demo
   labels:
-    app: hooktest
+    app: mysql-demo
 spec:
   selector:
     matchLabels:
-      app: hooktest
+      app: mysql-demo
       tier: mysql
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: hooktest
+        app: mysql-demo
         tier: mysql
     spec:
       containers:
