--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -13,4 +13,5 @@ kind: Kustomization
 images:
 - name: controller
   newName: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp
-  newTag: 0.0.3
+  newTag: ys1000_int.76d2fbd
+namespace: qiming-backend
