--- a/deploy/namespace_amberapp-system.yaml
+++ b/deploy/namespace_amberapp-system.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    control-plane: controller-manager
+    control-plane: amberapp-controller-manager
   name: amberapp-system
