fix: deploy namespace selection

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -13,5 +13,5 @@ kind: Kustomization
 images:
 - name: controller
   newName: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp
-  newTag: ys1000_int.76d2fbd
+  newTag: 0.0.4
 namespace: qiming-backend
