fix: remove leaderelection

--- a/deploy/apps_v1_deployment_amberapp-controller-manager.yaml
+++ b/deploy/apps_v1_deployment_amberapp-controller-manager.yaml
@@ -16,11 +16,7 @@ spec:
         control-plane: amberapp-controller-manager
     spec:
       containers:
-      - args:
-        - --health-probe-bind-address=:8081
-        - --metrics-bind-address=127.0.0.1:8080
-        - --leader-elect
-        command:
+      - command:
         - /manager
         env:
         - name: WATCH_NAMESPACE
