--- a/deploy/ys1000/deployments.yaml
+++ b/deploy/ys1000/deployments.yaml
@@ -279,25 +279,6 @@ subjects:
   namespace: qiming-backend
 ---
 apiVersion: v1
-data:
-  controller_manager_config.yaml: |
-    apiVersion: controller-runtime.sigs.k8s.io/v1alpha1
-    kind: ControllerManagerConfig
-    health:
-      healthProbeBindAddress: :8081
-    metrics:
-      bindAddress: 127.0.0.1:8080
-    webhook:
-      port: 9443
-    leaderElection:
-      leaderElect: true
-      resourceName: d0f11165.jibudata.com
-kind: ConfigMap
-metadata:
-  name: amberapp-manager-config
-  namespace: qiming-backend
----
-apiVersion: v1
 kind: Service
 metadata:
   labels:
@@ -330,11 +311,7 @@ spec:
         control-plane: amberapp-controller-manager
     spec:
       containers:
-      - args:
-        - --health-probe-bind-address=:8081
-        - --metrics-bind-address=127.0.0.1:8080
-        - --leader-elect
-        command:
+      - command:
         - /manager
         env:
         - name: WATCH_NAMESPACE
