add quiesce timeout support

--- a/config/crd/bases/ys.jibudata.com_apphooks.yaml
+++ b/config/crd/bases/ys.jibudata.com_apphooks.yaml
@@ -98,6 +98,8 @@ spec:
             properties:
               phase:
                 type: string
+              quiescedtimestamp:
+                type: string
             type: object
         type: object
     served: true
