--- a/deploy/apiextensions.k8s.io_v1_customresourcedefinition_apphooks.ys.jibudata.com.yaml
+++ b/deploy/apiextensions.k8s.io_v1_customresourcedefinition_apphooks.ys.jibudata.com.yaml
@@ -89,6 +89,8 @@ spec:
             properties:
               phase:
                 type: string
+              quiescedtimestamp:
+                type: string
             type: object
         type: object
     served: true
