--- a/deploy/ys1000/deployments.yaml
+++ b/deploy/ys1000/deployments.yaml
@@ -96,6 +96,8 @@ spec:
             properties:
               phase:
                 type: string
+              quiescedtimestamp:
+                type: string
             type: object
         type: object
     served: true
@@ -318,7 +320,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp:0.0.4
+        image: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp:0.0.5
         imagePullPolicy: Always
         name: manager
         resources:
