--- a/config/crd/bases/ys.jibudata.com_apphooks.yaml
+++ b/config/crd/bases/ys.jibudata.com_apphooks.yaml
@@ -98,7 +98,8 @@ spec:
             properties:
               phase:
                 type: string
-              quiescedtimestamp:
+              quiescedTimestamp:
+                format: date-time
                 type: string
             type: object
         type: object
