--- a/deploy/apiextensions.k8s.io_v1_customresourcedefinition_apphooks.ys.jibudata.com.yaml
+++ b/deploy/apiextensions.k8s.io_v1_customresourcedefinition_apphooks.ys.jibudata.com.yaml
@@ -89,7 +89,8 @@ spec:
             properties:
               phase:
                 type: string
-              quiescedtimestamp:
+              quiescedTimestamp:
+                format: date-time
                 type: string
             type: object
         type: object
