--- a/deploy/ys1000/deployments.yaml
+++ b/deploy/ys1000/deployments.yaml
@@ -96,7 +96,8 @@ spec:
             properties:
               phase:
                 type: string
-              quiescedtimestamp:
+              quiescedTimestamp:
+                format: date-time
                 type: string
             type: object
         type: object
