--- a/Dockerfile-multiarch
+++ b/Dockerfile-multiarch
@@ -1,5 +1,5 @@
 # Build the manager binary
-FROM golang:1.17 as builder
+FROM --platform=${BUILDPLATFORM} golang:1.17 as builder
 
 WORKDIR /workspace
 # Copy the Go Modules manifests
@@ -18,13 +18,11 @@ COPY controllers/ controllers/
 COPY pkg/ pkg/
 
 # Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager main.go
+ARG TARGETARCH
+ARG TARGETARCH
+RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -a -o manager main.go
 
-# Use distroless as minimal base image to package the manager binary
-# Refer to https://github.com/GoogleContainerTools/distroless for more details
-# FROM gcr.io/distroless/static:nonroot
-#FROM quay.io/shdn/distrolessstatic:nonroot
-FROM jibutech/ubi8-minimal:latest
+FROM --platform=${BUILDPLATFORM} redhat/ubi8-minimal:latest
 WORKDIR /
 COPY --from=builder /workspace/manager .
 USER 65532:65532
