--- a/deploy/ys1000/deployments.yaml
+++ b/deploy/ys1000/deployments.yaml
@@ -314,7 +314,11 @@ spec:
         control-plane: amberapp-controller-manager
     spec:
       containers:
-      - command:
+      - args:
+        - -zap-devel=false
+        - -zap-encoder=console
+        - -zap-log-level=debug
+        command:
         - /manager
         env:
         - name: WATCH_NAMESPACE
