--- a/config/crd/bases/ys.jibudata.com_apphooks.yaml
+++ b/config/crd/bases/ys.jibudata.com_apphooks.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.1
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: apphooks.ys.jibudata.com
 spec:
@@ -96,6 +95,8 @@ spec:
           status:
             description: AppHookStatus defines the observed state of AppHook
             properties:
+              errMsg:
+                type: string
               phase:
                 type: string
               quiescedTimestamp:
