--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -8,6 +8,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp
-  newTag: 0.0.5
+  newName: registry.cn-shanghai.aliyuncs.com/jibutech/amberapp
+  newTag: 0.1.0
 namespace: qiming-backend
