--- a/deploy/apps_v1_deployment_amberapp-controller-manager.yaml
+++ b/deploy/apps_v1_deployment_amberapp-controller-manager.yaml
@@ -27,7 +27,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp:0.0.5
+        image: registry.cn-shanghai.aliyuncs.com/jibutech/amberapp:0.1.0
         imagePullPolicy: Always
         name: manager
         resources:
