--- a/deploy/ys1000/deployments.yaml
+++ b/deploy/ys1000/deployments.yaml
@@ -9,7 +9,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.1
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: apphooks.ys.jibudata.com
 spec:
@@ -38,10 +38,14 @@ spec:
         description: AppHook is the Schema for the apphooks API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
             type: object
@@ -49,7 +53,8 @@ spec:
             description: AppHookSpec defines the desired state of AppHook
             properties:
               appProvider:
-                description: AppProvider is the application identifier for different vendors, such as mysql
+                description: AppProvider is the application identifier for different
+                  vendors, such as mysql
                 type: string
               databases:
                 description: Databases
@@ -77,10 +82,12 @@ spec:
                 description: Secret to access the application
                 properties:
                   name:
-                    description: Name is unique within a namespace to reference a secret resource.
+                    description: Name is unique within a namespace to reference a
+                      secret resource.
                     type: string
                   namespace:
-                    description: Namespace defines the space within which the secret name must be unique.
+                    description: Namespace defines the space within which the secret
+                      name must be unique.
                     type: string
                 type: object
               timeoutSeconds:
@@ -94,11 +101,27 @@ spec:
           status:
             description: AppHookStatus defines the observed state of AppHook
             properties:
+              errMsg:
+                type: string
               phase:
                 type: string
               quiescedTimestamp:
                 format: date-time
                 type: string
+              result:
+                properties:
+                  mongo:
+                    properties:
+                      isPrimary:
+                        type: boolean
+                      mongoEndpoint:
+                        type: string
+                    type: object
+                  mysql:
+                    type: object
+                  pg:
+                    type: object
+                type: object
             type: object
         type: object
     served: true
@@ -325,7 +348,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.cn-shanghai.aliyuncs.com/jibudata/amberapp:0.0.5
+        image: registry.cn-shanghai.aliyuncs.com/jibutech/amberapp:0.1.0
         imagePullPolicy: Always
         name: manager
         resources:
