--- a/config/crd/bases/ys.jibudata.com_apphooks.yaml
+++ b/config/crd/bases/ys.jibudata.com_apphooks.yaml
@@ -1,9 +1,10 @@
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: apphooks.ys.jibudata.com
 spec:
@@ -114,6 +115,13 @@ spec:
                   mysql:
                     type: object
                   pg:
+                    type: object
+                  redis:
+                    properties:
+                      quiescePreservedConfig:
+                        additionalProperties:
+                          type: string
+                        type: object
                     type: object
                 type: object
             type: object
